<resources>
  <string name="app_name">IPTV Organizer</string>
  <string name="add">Add</string>
  <string name="cancel">Cancel</string>
  <string name="close">Close</string>
  <string name="disabled">Disabled</string>
  <string name="enter_url">Enter URL</string>
  <string name="exit">Exit</string>
  <string name="export_file">Export File</string>
  <string name="import_file">Import File</string>
  <string name="import_generic">Import</string>
  <string name="loading">Loading</string>
  <string translatable="false" name="ok">OK</string>
  <string name="remove">Remove</string>
  <string name="save">Save</string>
  <string name="search">Search</string>
  <string name="settings">Settings</string>
  <string translatable="false" name="value_false">false</string>
  <string translatable="false" name="value_true">true</string>
  <string name="activity_main">M3U Search</string>
  <string name="activity_channels">M3U Channels</string>
  <string name="activity_epg">EPG Channels</string>
  <string name="activity_settings">@string/settings</string>
  <string name="dialog_saved_search_keywords_list_title">Saved Search Keywords</string>
  <string name="toast_error_no_app_found">External media player not found</string>
  <string name="main_menuitem_search">@string/search</string>
  <string name="main_menuitem_channels">@string/activity_channels</string>
  <string name="main_menuitem_epg">@string/activity_epg</string>
  <string name="main_menuitem_settings">@string/activity_settings</string>
  <string name="main_menuitem_exit">@string/exit</string>
  <string name="channels_menuitem_main">@string/activity_main</string>
  <string name="channels_menuitem_epg">@string/activity_epg</string>
  <string name="channels_menuitem_import_m3u_url">Import M3U Playlist URL</string>
  <string name="channels_menuitem_import_m3u_file">Import M3U Playlist File</string>
  <string name="channels_menuitem_search">@string/search</string>
  <string name="channels_menuitem_sort_sequential">Sort Sequentially</string>
  <string name="channels_menuitem_sort_alphabetic">Sort Alphabetic</string>
  <string name="channels_menuitem_settings">@string/activity_settings</string>
  <string name="channels_menuitem_exit">@string/exit</string>
  <string name="channels_dialog_import_m3u_url_title">@string/enter_url</string>
  <string name="channels_dialog_import_m3u_url_button_positive">@string/import_generic</string>
  <string name="channels_dialog_import_m3u_url_button_negative">@string/cancel</string>
  <string name="epg_menuitem_main">@string/activity_main</string>
  <string name="epg_menuitem_channels">@string/activity_channels</string>
  <string name="epg_menuitem_import_xmltv_url">Import XMLTV EPG URL</string>
  <string name="epg_menuitem_import_xmltv_file">Import XMLTV EPG File</string>
  <string name="epg_menuitem_search">@string/search</string>
  <string name="epg_menuitem_settings">@string/activity_settings</string>
  <string name="epg_menuitem_exit">@string/exit</string>
  <string name="epg_dialog_import_xmltv_url_title">@string/enter_url</string>
  <string name="epg_dialog_import_xmltv_url_button_positive">@string/import_generic</string>
  <string name="epg_dialog_import_xmltv_url_button_negative">@string/cancel</string>
  <string name="pref_category_settings">@string/activity_settings</string>
  <string name="pref_category_m3u_search">@string/activity_main</string>
  <string name="pref_category_m3u_channels">@string/activity_channels</string>
  <string name="pref_category_epg_channels">@string/activity_epg</string>
  <string name="pref_category_advanced">Advanced</string>
  <string name="dbedittextpreference_buttontext_negative">@string/import_file</string>
  <string name="dbedittextpreference_buttontext_neutral">@string/export_file</string>
  <string name="dbedittextpreference_buttontext_positive">@string/save</string>
  <string translatable="false" name="pref_dbedittextpreference_autosave_key">pref_dbedittextpreference_autosave</string>
  <string name="pref_dbedittextpreference_autosave_title">Auto save data after file import</string>
  <string name="pref_dbedittextpreference_autosave_summary_on" >Imported data is immediately saved to DB</string>
  <string name="pref_dbedittextpreference_autosave_summary_off">Imported data is copied to text field in dialog, but not yet saved to DB</string>
  <string translatable="false" name="pref_dbedittextpreference_autosave_default">@string/value_true</string>
  <string translatable="false" name="pref_dbedittextpreference_autoclose_key">pref_dbedittextpreference_autoclose</string>
  <string name="pref_dbedittextpreference_autoclose_title">Auto close dialog after file import</string>
  <string name="pref_dbedittextpreference_autoclose_summary_on" >Close dialog after data is imported and automatically saved to DB</string>
  <string name="pref_dbedittextpreference_autoclose_summary_off">Do not close dialog after data is imported and automatically saved to DB</string>
  <string translatable="false" name="pref_dbedittextpreference_autoclose_default">@string/value_true</string>
  <string translatable="false" name="pref_apply_default_url_templates_key">pref_apply_default_url_templates</string>
  <string name="pref_apply_default_url_templates_title">Apply static string values to user-defined default import URL templates</string>
  <string name="pref_apply_default_url_templates_summary_on" >Default import URL values are templates</string>
  <string name="pref_apply_default_url_templates_summary_off">Default import URL values are not templates</string>
  <string translatable="false" name="pref_apply_default_url_templates_default">@string/value_true</string>
  <string translatable="false" name="pref_search_input_debounce_interval_key">pref_search_input_debounce_interval</string>
  <string name="pref_search_input_debounce_interval_title">Input debounce interval</string>
  <string name="pref_search_input_debounce_interval_summary">The amount of time to wait (in milliseconds) after a keystroke before running a DB query to allow for rapid data entry.</string>
  <string translatable="false" name="pref_search_input_debounce_interval_hint">2000</string>
  <string translatable="false" name="pref_search_input_debounce_interval_default">@string/pref_search_input_debounce_interval_hint</string>
  <string translatable="false" name="pref_search_results_max_count_key">pref_search_results_max_count</string>
  <string name="pref_search_results_max_count_title">Maximum count of search results</string>
  <string name="pref_search_results_max_count_summary">A restriction on the total number of M3U channels returned by a DB query. Smaller is faster.</string>
  <string translatable="false" name="pref_search_results_max_count_hint">100</string>
  <string translatable="false" name="pref_search_results_max_count_default">@string/pref_search_results_max_count_hint</string>
  <string translatable="false" name="pref_search_results_remove_duplicate_names_key">pref_search_results_remove_duplicate_names</string>
  <string name="pref_search_results_remove_duplicate_names_title">Remove duplicate names</string>
  <string name="pref_search_results_remove_duplicate_names_summary_on" >For each distinct name, the search results will only display one M3U channel</string>
  <string name="pref_search_results_remove_duplicate_names_summary_off">For each distinct name, the search results will display all available M3U channels</string>
  <string translatable="false" name="pref_search_results_remove_duplicate_names_default">@string/value_true</string>
  <string translatable="false" name="pref_default_m3u_url_key">pref_default_m3u_url</string>
  <string name="pref_default_m3u_url_title">Default M3U Playlist URL</string>
  <string name="pref_default_m3u_url_summary">Initial value in \"Import M3U Playlist URL\" dialog.</string>
  <string translatable="false" name="pref_default_m3u_url_hint">https://example.com/playlist.m3u</string>
  <string translatable="false" name="pref_default_m3u_url_default">https://iptv-org.github.io/iptv/index.m3u</string>
  <string translatable="false" name="pref_append_m3u_playlists_key">pref_append_m3u_playlists</string>
  <string name="pref_append_m3u_playlists_title">Append M3U Playlists</string>
  <string name="pref_append_m3u_playlists_summary_on" >Imported data is added to the existing list of M3U channels</string>
  <string name="pref_append_m3u_playlists_summary_off">Imported data replaces the existing list of M3U channels</string>
  <string translatable="false" name="pref_append_m3u_playlists_default">@string/value_false</string>
  <string name="pref_m3u_channels_mapping_name_to_id_title">Map from channel name to channel ID</string>
  <string name="pref_m3u_channels_mapping_name_to_id_summary">One value per line. Format: \"[name or tvg-name] =\> [new tvg-id]\"</string>
  <string name="pref_m3u_channels_mapping_id_to_id_title">Map from channel ID to channel ID</string>
  <string name="pref_m3u_channels_mapping_id_to_id_summary">One value per line. Format: \"[old tvg-id] =\> [new tvg-id]\"</string>
  <string name="pref_m3u_channels_filter_whitelist_names_title">Filter by channel name whitelist</string>
  <string name="pref_m3u_channels_filter_whitelist_names_summary">One value per line. Format: \"[name or tvg-name]\". Prefix for case-insensitive substring: \"#~*\"</string>
  <string name="pref_m3u_channels_filter_whitelist_ids_title">Filter by channel ID whitelist</string>
  <string name="pref_m3u_channels_filter_whitelist_ids_summary">One value per line. Format: \"[tvg-id]\"</string>
  <string name="pref_m3u_channels_filter_blacklist_names_title">Filter by channel name blacklist</string>
  <string name="pref_m3u_channels_filter_blacklist_names_summary">@string/pref_m3u_channels_filter_whitelist_names_summary</string>
  <string name="pref_m3u_channels_filter_blacklist_ids_title">Filter by channel ID blacklist</string>
  <string name="pref_m3u_channels_filter_blacklist_ids_summary">@string/pref_m3u_channels_filter_whitelist_ids_summary</string>
  <string name="pref_m3u_channels_media_url_static_values_title">Media URL static string values</string>
  <string name="pref_m3u_channels_media_url_static_values_summary">One value per line.</string>
  <string translatable="false" name="pref_default_xmltv_url_key">pref_default_xmltv_url</string>
  <string name="pref_default_xmltv_url_title">Default XMLTV EPG URL</string>
  <string name="pref_default_xmltv_url_summary">Initial value in \"Import XMLTV EPG URL\" dialog.</string>
  <string translatable="false" name="pref_default_xmltv_url_hint">https://example.com/epg.xmltv</string>
  <string translatable="false" name="pref_default_xmltv_url_default"></string>
  <string translatable="false" name="pref_auto_update_default_xmltv_url_key">pref_auto_update_default_xmltv_url</string>
  <string name="pref_auto_update_default_xmltv_url_title">Automatically update \"Default XMLTV EPG URL\" from imported M3U</string>
  <string name="pref_auto_update_default_xmltv_url_summary_on" >If found, save value of \"x-tvg-url\" or \"url-tvg\" parameter in \"#EXTM3U\" file header directive</string>
  <string name="pref_auto_update_default_xmltv_url_summary_off">@string/disabled</string>
  <string translatable="false" name="pref_auto_update_default_xmltv_url_default">@string/value_true</string>
  <string translatable="false" name="pref_parse_list_in_xmltv_url_key">pref_parse_list_in_xmltv_url</string>
  <string name="pref_parse_list_in_xmltv_url_title">Parse token separated list in XMLTV EPG URL</string>
  <string name="pref_parse_list_in_xmltv_url_summary_on" >Parse value in \"Import XMLTV EPG URL\" dialog. Import first working URL in list.</string>
  <string name="pref_parse_list_in_xmltv_url_summary_off">@string/disabled</string>
  <string translatable="false" name="pref_parse_list_in_xmltv_url_default">@string/value_true</string>
  <string translatable="false" name="pref_import_all_list_values_in_xmltv_url_key">pref_import_all_list_values_in_xmltv_url</string>
</resources>